# raffle-project

./: .gitignore  README.md  cabal.project  hie.yaml  raffle-project.cabal
app/: Main.hs
front-end/: next.config.js  package-lock.json  package.json  tailwind.config.js
front-end/components/: BuyTicket.tsx  Claim.tsx  Close.tsx  NftGrid.tsx  Raffle.tsx  StartRaffle.tsx  TicketGrid.tsx  WalletConnect.tsx
front-end/config/: blockfrost-key.json
front-end/endpoints/: RaffleEndpoints.ts  endpoints.ts
front-end/pages/: helios-test.tsx  helios.tsx  index.tsx  raffle.tsx
front-end/utils/: cardano.ts  lucid.ts  validators.ts
plutus-scripts/: lottery.plutus  mint-raffle.plutus  mint-ticket.plutus
src/: BuyTicket.hs  BuyTicketEmulator.hs  Lottery.hs  LotteryEmulator.hs  MintRaffle.hs  MintRaffleEmulator.hs  MintTicket.hs  MintTicketEmulator.hs  Utils.hs
tests/: Spec.hs
tests/Spec/: LotteryTest.hs  MintRaffleTest.hs
tests/Test/: LotteryTest.hs  MintRaffleTest.hs
