Cabal-Version:      2.4
Name:               raffle-project
Version:            0.1.0.0
Author:              "Jonathan Rodriguez"
Maintainer:          ""
Build-Type:          Simple
Copyright:           ""
License:             Apache-2.0
License-files:       LICENSE

--------------------------
-- Default PLutus Language extensions
--------------------------
common common-lang
  default-language:   Haskell2010
  default-extensions:
    DataKinds
    DeriveAnyClass
    DeriveGeneric
    FlexibleContexts
    NoImplicitPrelude
    OverloadedStrings
    ScopedTypeVariables
    TemplateHaskell
    TypeApplications
    TypeFamilies
    TypeOperators
    MultiParamTypeClasses

--------------------------
-- Optional PLutus Language extensions
--------------------------
common lang-optional
  other-extensions:
    RecordWildCards
    LambdaCase
    GeneralizedNewtypeDeriving
    DerivingStrategies
    NumericUnderscores

common plutus-default-dependencies
  build-depends:
    , plutus-contract
    , plutus-ledger
    , plutus-ledger-api
    , plutus-ledger-constraints
    , plutus-tx-plugin
    , plutus-tx

common plutus-optional-dependencies
  build-depends:
    , playground-common
    , plutus-pab
    , plutus-use-cases

common plutus-new-dependencies
  build-depends:
    , plutus-script-utils

common other-cardano-dependencies
  build-depends:
    , cardano-api
    , cardano-crypto-class
    , cardano-ledger-core
    , cardano-wallet-core
    , cardano-ledger-shelley
    , cardano-ledger-babbage

common non-cardano-dependencies
  build-depends:
    , aeson
    , base ^>=4.14.1.0
    , bytestring
    , containers
    , data-default
    , serialise
    , text
    , freer-extras
    , openapi3
    , prettyprinter
    , html-entities
    , lens
    , ansi-terminal
    , QuickCheck
    , directory
    , hedgehog
    , kuber

common common-ghc-options
  ghc-options:
    -Wall -fobject-code -fno-ignore-interface-pragmas 
    -fno-omit-interface-pragmas -fno-strictness 
    -fno-spec-constr -fno-specialise

library
  import:           common-lang
                  , common-ghc-options
                  , plutus-default-dependencies
                  , plutus-optional-dependencies
                  , plutus-new-dependencies
                  , other-cardano-dependencies
                  , non-cardano-dependencies

  hs-source-dirs: src
  
  exposed-modules:
      Utils
    , MintTicket
    , MintTicketEmulator
    , BuyTicket
    , BuyTicketEmulator
    , Lottery
    , MintRaffle
    , MintRaffleEmulator

executable raffle-project
  import:
    common-lang ,
    plutus-default-dependencies ,
    non-cardano-dependencies

  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base ^>=4.14.1.0,
                       raffle-project

  default-language:    Haskell2010
  ghc-options:         -Wall -O2

test-suite unit-test
  import:  common-lang
  import:  plutus-default-dependencies ,
           plutus-new-dependencies ,
           other-cardano-dependencies ,
           non-cardano-dependencies
  type:    exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
    Spec.MintRaffleTest ,
    Spec.LotteryTest
  hs-source-dirs:
    tests
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , base ^>=4.14.1.0
    , hedgehog
    , tasty == 1.3.1
    , tasty-hedgehog
    , tasty-expected-failure
    , tasty-hunit
    , raffle-project
